@@ -3,6 +3,8 @@ PHORONIX TEST SUITE CHANGE-LOG
 Phoronix Test Suite (Git)
 
 pts-core: Add new analyze-run-times sub-command
+pts-core: Allow hiding results from within the result viewer
+pts-core: Allow generating performance-per-dollar metrics from within the result file
 
 Phoronix Test Suite 9.4.1
 4 March 2020
